--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     <button class="btn"onclick ="setDifficult(4,2),restartGame()">easy</button>
     <button class="btn"onclick ="setDifficult(8,12),restartGame()">medium</button>
     <button class="btn"onclick ="setDifficult(12,30),restartGame()">hard</button>
-    <div class="time">Time:<span></span></div>
+    <h3></h3>
     <button class="smiley" onclick="restartGame(this)">😁</button>
+    <div class="time">Time:<span></span></div>
+    <div class="lives">💜💜💜<span></span></div> 
     <div class="flag"><span></span></div>
     <h2></h2>
-    <h3></h3>
-    <table class="table"  cellpadding="4">
+    <table border="5" cellpadding="4" align="center">
         <tBody class="board"></tbody>  
         </tBody>
     </table>
